<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PathApp</string>
    <string name="service_name">PathService</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="close">Close</string>
 	<string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    <!--action bar menu items -->
    <string name="action_websearch">Web search</string>
    <string name="action_signin">Signin</string>
    <string name="action_signout">Signout</string>
    
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="frg_btn_text_1">First Fragment</string>
    <string name="frg_btn_text_2">Second Fragment</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="email">Email</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    
	 <string-array name="menus">
        <item >Home</item>
        <item >Colombo</item>
        <item >Beliatta</item>
        <item >Matara</item>
        <item >Moratuwa</item>
        <item >NewYork</item>
        <item >Japan</item>
    </string-array>
</resources>
