<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
        >

        <TextView           
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />
       

        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>
        
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" 
	    android:paddingTop="5dp"
        >
        <TextView            
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMedium" />
       

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword" >        
        </EditText>
    </LinearLayout>
    
 	<LinearLayout
  	   android:layout_width="fill_parent"
	   android:layout_height="wrap_content" 
	   android:layout_gravity="right"  
	   android:orientation="horizontal" >
		<Button
		    android:id="@+id/signup_now_btn"
		    android:layout_width="0dp"
		    android:layout_height="45dp"
		     android:layout_weight="1"
		    android:layout_marginRight="15dp"
		    android:text="@string/sign_up"
		    style="?android:attr/buttonBarButtonStyle"
		    android:textColor="#ff0000ff" />
		<Button
		    android:id="@+id/signin_btn"
		    android:layout_width="0dp"
		    android:layout_height="45dp"
		     android:layout_weight="1"		    
		    android:layout_marginRight="15dp"
		    android:text="@string/sign_in"
		    style="?android:attr/buttonBarButtonStyle"
		    android:textColor="#ff0000ff" />

		

	 </LinearLayout>
</LinearLayout>
