<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
        >

        <TextView           
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />
       

        <EditText
            android:id="@+id/username_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>
        
    </LinearLayout>
     <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
        >

        <TextView           
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/email"
            android:textAppearance="?android:attr/textAppearanceMedium" />
       

        <EditText
            android:id="@+id/email_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textEmailAddress" >          
        </EditText>
        
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" 
	    android:paddingTop="5dp"
        >
        <TextView            
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMedium" />
       

        <EditText
            android:id="@+id/password_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword" >        
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" 
	    android:paddingTop="5dp"
        >
        <TextView            
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMedium" />
       

        <EditText
            android:id="@+id/confirm_password_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword" >        
        </EditText>
    </LinearLayout>
 	<RelativeLayout
  	   android:layout_width="fill_parent"
	   android:layout_height="wrap_content"   
	   android:orientation="horizontal" >

		<Button
		    android:id="@+id/signup_btn"
		    android:layout_width="wrap_content"
		    android:layout_height="45dp"
		    android:layout_alignParentRight="true"
		    android:layout_marginRight="15dp"
		    android:text="@string/sign_up"
		    android:textColor="#ff0000ff" />

	 </RelativeLayout>
</LinearLayout>
